The Base Character Class

--- a/gas_top_down_rpg.uproject
+++ b/gas_top_down_rpg.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "gas_top_down_rpg",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
